<resources>
    <string name="app_name">RunTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today_date">Today is %1$s</string>
    <string name="maps_api_key" />
    <string name="start_a_new_run">Start a New Run</string>
    <string name="view_previous_runs">View Previous Runs</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="pace_0_00_min_mi">Pace: 0:00 min/mi</string>
    <string name="duration_00_00_00">Duration: 00:00:00</string>
    <string name="distance_0_0_mi">Distance: 0.0 mi</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="start">Start</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="pace_n_a">Pace: N/A</string>
    <string name="error_fetching_weather_data">Error fetching weather data</string>
    <string name="weather_data_unavailable">Weather data unavailable</string>
    <string name="run_id">Run ID</string>
    <string name="date">Date</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="delete">Delete</string>
    <string name="_00_00">00:00</string>
    <string name="_0_00_mi_min">0.00 mi/min</string>
    <string name="average_pace">average pace</string>
    <string name="_0_00_mi">0.00 mi</string>
    <string name="distance2">distance</string>
    <string name="start2">Start</string>
    <string name="reset">Reset</string>
    <string name="save_run">Save Run</string>
    <string name="uninstall_app">Uninstall App</string>
</resources>