<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/timeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/_00_00"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/averagePaceValueView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_0_00_mi_min"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/distanceValueView"
        app:layout_constraintTop_toBottomOf="@id/timeView" />

    <TextView
        android:id="@+id/averagePaceLabelView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_pace"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/averagePaceValueView"
        app:layout_constraintStart_toStartOf="@id/averagePaceValueView"
        app:layout_constraintEnd_toEndOf="@id/averagePaceValueView" />

    <TextView
        android:id="@+id/distanceValueView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_0_00_mi"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/averagePaceValueView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeView" />

    <TextView
        android:id="@+id/distanceLabelView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance2"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/distanceValueView"
        app:layout_constraintStart_toStartOf="@id/distanceValueView"
        app:layout_constraintEnd_toEndOf="@id/distanceValueView" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@id/startPauseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/distanceValueView"
        app:layout_constraintVertical_bias="0.625" />

    <Button
        android:id="@+id/startPauseButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start2"
        app:layout_constraintWidth_percent=".5"
        app:layout_constraintEnd_toStartOf="@+id/resetButton"
        app:layout_constraintBottom_toTopOf="@+id/saveRunButton"/>

    <Button
        android:id="@+id/resetButton"
        android:text= "@string/reset"
        android:layout_width= "0dp"
        android:layout_height= "wrap_content"
        app:layout_constraintWidth_percent=".5"
        app:layout_constraintStart_toEndOf ="@+id/startPauseButton"
        app:layout_constraintBottom_toTopOf ="@+id/saveRunButton"/>
    <Button
        android:id="@+id/saveRunButton"
        android:layout_width= "wrap_content"
        android:layout_height= "wrap_content"
        android:text="@string/save_run"
        app:layout_constraintBottom_toBottomOf ="parent"
        app:layout_constraintStart_toStartOf ="parent"
        app:layout_constraintEnd_toEndOf ="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>